# wants_dark_theme

./: CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
include/wants_dark_theme/: wants_dark_theme.hpp
src/: wants_dark_theme.cpp
tests/: CMakeLists.txt  tests.cpp
